<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TechnologyFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="557dp"
        tools:ignore="VisualLintBounds">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="27dp"
                android:contentDescription="@string/this_is_photo"
                android:scaleType="centerCrop"
                android:src="@drawable/tec"
                app:layout_constraintBottom_toTopOf="@+id/title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="VisualLintBounds"
              />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="13dp"
                android:text="@string/playstation_plus_game_catalog"
                android:textAlignment="center"
                android:textSize="20sp"
              />

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/comment"
                android:inputType="text"
                android:minHeight="48dp"
        />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="76dp"
                android:layout_marginEnd="73dp"
                android:layout_marginBottom="36dp"
                android:text="@string/send"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.432" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>